fix: reviews text z-index

--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -83,6 +83,7 @@
       padding-left: 7px
       height: 8px
     &__text
+      z-index: 1
       margin: 0 -3px 0 3px
       max-width: 537px
       font-weight: normal
